fix iframe overflow & make it scroll nicely c:

--- a/web-client/src/App.css
+++ b/web-client/src/App.css
@@ -62,3 +62,10 @@ h1 {
 .output img {
   max-height: calc(100vh - 260px);
 }
+
+.output iframe {
+  width: 90vw;
+  height: 50vh;
+  border: none;
+  overflow: scroll;
+}
